--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,7 @@ terraform.rc
 
 # End of https://www.toptal.com/developers/gitignore/api/terraform
 cdk/platform/outputs.json
+.terraform
+terraform.tfstate*
+terraform.tfvars
+.terraform.lock*
