update with recent cli changes

--- a/terraform/Makefile
+++ b/terraform/Makefile
@@ -1,34 +1,22 @@
 AWS_PROFILE ?= ls-sandbox
-LOCAL_AWS_PROFILE ?= local
+LOCAL_AWS_PROFILE ?= localstack
 AUTO_APPROVE ?= --auto-approve
 LOCALSTACK_AUTH_TOKEN ?= 
 
-deploy-platform:
+deploy-platform-aws:
 	cd platform; \
 	terraform init; \
 	TF_VAR_aws_profile=$(AWS_PROFILE) terraform apply $(AUTO_APPROVE); \
 	terraform output > ../application/terraform.tfvars
 
-deploy-application-aws:
-	cd application; \
-	terraform init; \
-	TF_WORKSPACE=aws TF_VAR_aws_profile=$(AWS_PROFILE) terraform apply $(AUTO_APPROVE);
-
-destroy-application-aws:
-	cd application; \
-	TF_WORKSPACE=aws TF_VAR_aws_profile=$(AWS_PROFILE) terraform destroy $(AUTO_APPROVE);
-
-deploy-application:
-	cd application; \
-	TF_WORKSPACE=local TF_VAR_aws_profile=$(LOCAL_AWS_PROFILE) tflocal apply $(AUTO_APPROVE);
-
-destroy-application:
-	cd application; \
-	TF_WORKSPACE=local TF_VAR_aws_profile=$(LOCAL_AWS_PROFILE) tflocal destroy $(AUTO_APPROVE);
-
-destroy-platform:
+destroy-platform-aws:
 	cd platform; \
 	TF_VAR_aws_profile=$(AWS_PROFILE) terraform destroy $(AUTO_APPROVE);
 
-replicate:
-	AWS_PROFILE=$(AWS_PROFILE) LOCALSTACK_AUTH_TOKEN=$(LOCALSTACK_AUTH_TOKEN) ./replicate.sh
+deploy-application:
+	cd application; \
+	TF_WORKSPACE=local TF_VAR_aws_profile=$(LOCAL_AWS_PROFILE) terraform apply $(AUTO_APPROVE);
+
+destroy-application:
+	cd application; \
+	TF_WORKSPACE=local TF_VAR_aws_profile=$(LOCAL_AWS_PROFILE) terraform destroy $(AUTO_APPROVE);
