--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,6 @@ override.tf.json
 
 # End of https://www.toptal.com/developers/gitignore/api/terraform
 cdk/platform/outputs.json
+
+# python venv
+.venv
